# solana-contracts

./: .gitignore  README.md
app/: Makefile  package.json  webpack.config.js
app/public/: index.html
app/src/: App.js  index.css
app/src/components/Contract-a/: AccInfo.tsx  Balance.tsx  Connect.tsx  ContractA.tsx  Fund.tsx  Keypair.tsx  (+4 more)
contracts/contract-a/: Anchor.toml  README.md
contracts/contract-a/tests/: contract-a.ts
contracts/contract-b/: Cargo.toml  README.md
contracts/contract-b/solana-wallet/: keypair.json
contracts/contract_cargo/: Cargo.toml
contracts/contract_cargo/src/: main.rs
contracts/counter-state/: Cargo.toml
contracts/counter-state/solana-wallet/: keypair.json
contracts/counter-state/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
contracts/counter-state/tests/: functional.rs
contracts/program-transfer/: Makefile  README.md
contracts/program-transfer/devnet/: alice.json  bob.json  program.json
contracts/program-transfer/program/: Cargo.toml
contracts/program-transfer/program/src/: lib.rs
contracts/program-transfer/solana-wallet/: keypair.json
contracts/puppet/: Anchor.toml  README.md  tsconfig.json
contracts/puppet/programs/puppet/: Cargo.toml
contracts/puppet/programs/puppet/src/: lib.rs
contracts/puppet/tests/: puppet.ts
contracts/tester/: Cargo.toml
contracts/tester/solana-wallet/: keypair.json
contracts/tester/src/: lib.rs
notes/: contract-b.js  contract-cargo.js  counter-state.js  program-transfer.js  settings.js  state-program.js  tester.js  token-transfer-inside.js  wallet-tutorials.js
(+64 files in other folders)
