[package]
name = "contract-b"
version = "0.1.0"
edition = "2021"
description = "Contract B"

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.10.12"

[dev-dependencies]
solana-program-test = "=1.10.12"
solana-sdk = "=1.10.12"

[features]
no-entrypoint = []

[lib]
name = "contract_b"
crate-type = ["cdylib", "lib"]
