[package]
name = "puppet"
version = "0.1.0"
rust-version = "1.56"
description = "Created with Anchor"
# edition = "2018"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "puppet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"

# [package]
# name = "puppet"
# version = "0.1.0"
# description = "Created with Anchor"
# rust-version = "1.56"
# edition = "2021"

# [lib]
# crate-type = ["cdylib", "lib"]
# name = "puppet"

# [features]
# no-entrypoint = []
# cpi = ["no-entrypoint"]

# [dependencies]
# anchor-lang = "0.24.2"
